--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
     <script src="https://cdn.logwork.com/widget/digital.js"></script>
 </head>
 <body>
-    <a href="https://logwork.com/clock-widget/" 
-       class="digital-clock" 
-       data-style="round" 
-       data-size="305" 
-       data-timezone="Africa/Lagos" 
-       data-language="en">
-        By Aadi
+<div class="cleanslate w24tz-current-time w24tz-middle" style="display: inline-block !important; visibility: hidden !important; min-width:300px !important; min-height:145px !important;"><p><a href="//ww2.24timezones.com/Lagos/time" style="text-decoration: none" class="clock24" id="tz24-1738591580-c1125-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIxIiwic2hvd3NlY29uZHMiOiIwIiwiY29udGFpbmVyX2lkIjoiY2xvY2tfYmxvY2tfY2I2N2EwY2Q1Y2NmZDExIiwidHlwZSI6ImRiIiwibGFuZyI6ImVuIn0=" title="Lagos current time" target="_blank" rel="nofollow">Aadi</a></p><div id="clock_block_cb67a0cd5ccfd11"></div></div>
+<script type="text/javascript" src="//w.ww2.24timezones.com/l.js" async></script>
     </a>
 </body>
 </html>
